<resources>
    <string name="app_name">World Notepad</string>

    <string name="unexpected_error">Unexpected Error</string>
    <string name="refresh">Refresh</string>

    <!--note list-->
    <string name="note_list_invalid_password_toast">Invalid password</string>
    <string name="note_list_dialog_title">Password required</string>
    <string name="note_list_dialog_button">Continue</string>
    <string name="note_list_search_no_results">No results</string>
    <string name="note_list_search_hint">Search by title</string>

    <!--note form-->
    <string name="note_form_title_label">Title</string>
    <string name="note_form_content_label">Content</string>
    <string name="note_form_password_label">Password</string>
    <string name="note_form_save_button">Save</string>
    <string name="note_form_success_toast">Note saved</string>
    <string name="note_form_password_required">Password required</string>
</resources>
