<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.globalnotepadmobile.presentation.noteform.NoteFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1541045839364233/8440593304">
        </com.google.android.gms.ads.AdView>

        <TextView
            style="@style/DefaultTextView"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/note_form_title_label" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="40" />

        <TextView
            style="@style/DefaultTextView"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/note_form_content_label" />

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:maxLength="800"
            android:inputType="textMultiLine"
            android:minLines="5" />

        <CheckBox
            android:id="@+id/cbPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/note_form_password_required" />

        <TextView
            style="@style/DefaultTextView"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/note_form_password_label" />

        <EditText
            android:id="@+id/etPassword"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />

        <ViewFlipper
            android:id="@+id/vfLoadingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_form_save_button" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </ViewFlipper>

    </LinearLayout>
</ScrollView>
